# EpamLab

./: .gitignore  CMakeLists.txt  PCH.h  PHC.h  app  main.cpp
Catch2_example/: CMakeLists.txt  funk.h  test.cpp
Catch2_example/test/: main.cpp
L1/: CMakeLists.txt  app.cpp
L10_Exeption/: task.txt
L11_Container/: task.txt
L11_Memory/: CMakeLists.txt  app.cpp  task.txt
L12_user_Container/: Array.hpp  CMakeLists.txt  app.cpp  task.txt
L13/: task.txt
L14/: Array.hpp  CMakeLists.txt  Descriptor.cpp  Descriptor.h  app.cpp  task.md
L15/: CMakeLists.txt  CustomAlloc.h  MyAlloc.hpp  SharedPtr.hpp  Student.cpp  Student.h  app.cpp  task.txt
L16/: CMakeLists.txt  algorithm.hpp  app.cpp  task.txt
L17_userAlgorithm/: CMakeLists.txt  Sort.hpp  app.cpp  task.txt
L2/: CMakeLists.txt  app.cpp
L2/headers/: Figure.hpp  Square.h
L2/src/: Square.cpp  app.cpp
L2_2/: CMakeLists.txt
L2_2/headers/: Figure.h  Figure.hpp  Line.h  Square.h
L2_2/src/: Figure.cpp  Line.cpp  Square.cpp  app.cpp
L2_2/tests/: tester.cpp
L3/: CMakeLists.txt  task.txt
L3/headers/: Vector.h
L3/src/: Vecrot.cpp  app.cpp
L4/: CMakeLists.txt  task.txt
L4/headers/: AbstractPhone.h  LandlinePhone.h  MobylePhone.h  Phone.h  RadioPhone.h
L4/src/: LandlinePhone.cpp  MobylePhone.cpp  Phone.cpp  RadioPhone.cpp  app.cpp
L5/: CMakeLists.txt  task.txt
L5/headers/: Array2D.h  Array2D.hpp
L5/src/: Array2D.cpp  app.cpp
L6_Templates/: CMakeLists.txt
L6_Templates/headers/: Array.hpp  Tools.h
L6_Templates/src/: app.cpp
L7_Lambdas/: CMakeLists.txt  tasks.txt
L7_Lambdas/src/: app.cpp
L8_Containers/: CMakeLists.txt  tasks.txt
L8_Containers/headers/: Bill.h  Currency.h  Rate.h
L8_Containers/src/: Bill.cpp  Currency.cpp  Rate.cpp  app.cpp
L9_Files/: CMakeLists.txt  db  task.txt
L9_Files/headers/: DBMS.h  Token.h  Token.hpp  model.h  model.hpp  resources.h
L9_Files/src/: DBMS.cpp  app.cpp
L9_Files/test/: t1.cpp
examples/: ForwardExample.cpp  Gri.cpp  MooveSemantic.cpp  app.cpp  emplase_vs_insert.cpp
