cmake_minimum_required(VERSION 3.0.0)
project(EpamLab VERSION 0.1.0)

add_subdirectory("./L1")
add_subdirectory("./L2")
add_subdirectory("./L2_2")
add_subdirectory("./L3")
add_subdirectory("./L4")
add_subdirectory("./L5")
add_subdirectory("./L6_Templates")
add_subdirectory("./L7_Lambdas")
add_subdirectory("./L8_Containers")
add_subdirectory("./L9_Files")
add_subdirectory("./L9.2_BagTask")
add_subdirectory("./L10_Exeption")
add_subdirectory("./L11_Memory")
add_subdirectory("./L12_user_Container")
add_subdirectory("./L13")
add_subdirectory("./L14")

add_subdirectory("./Catch2_example")